data/derived/sp14/progs/unify/prog3097.ml.out
Characters 92-93:
  x :: a
       ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
